typescript/checker/tests/conformance/parser/ecmascript5/TupleTypes/TupleType4.ts.stderr
error: Unexpected eof
 --> $DIR/tests/conformance/parser/ecmascript5/TupleTypes/TupleType4.ts:1:9
  |
1 | var v: [
  |         ^

